Overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ body
     float: left;
     animation-fill-mode: forwards;
     animation-duration: 0.5s;
+    overflow: hidden;
 }
 
 .splash
